# kikori

./: Makefile  pyproject.toml  setup.cfg
kikori/: __init__.py  app.py  event.py  graphics.py
stubs/sdl2/: __init__.pyi
tests/: test_kikori.py
