[tool.poetry]
name = "kikori"
version = "0.1.0"
description = ""
authors = ["Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pysdl2 = "0.9.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
kikori = 'kikori:main'
