[tool.poetry]
name = "kikori"
version = "0.1.0"
description = ""
authors = ["Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pysdl2 = "0.9.6"
Xlib = "^0.21.0"
pillow = "^5.4"
sh = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
kikori = 'kikori:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

